--- a/.env.sample
+++ b/.env.sample
@@ -3,7 +3,7 @@ LEVEL_LOG = ["DEBUG", "INFO", "WARNING", "ERROR"]
 SECRET_KEY = XXXX
 
 # To use hosting Supabase PostgreSQL DB
-DATABASE_URL=postgres://postgres:(XXXXXXXX)@db.mnnrtbfkykkcbjhdybwf.supabase.co:6543/postgres
+DATABASE_URL=postgres://postgres:XXXXX
 
 # SQlite database data (only for local)
 DB_SQLITE_URL=sqlite://teleworking.db
@@ -16,4 +16,4 @@ CONFIG_MODE="development"
 DEVELOPMENT_DATABASE_URL="sqlite://teleworking.db"
 TEST_DATABASE_URL=
 STAGING_DATABASE_URL=
-PRODUCTION_DATABASE_URL="postgres://postgres:(XXXXXXXX)@db.mnnrtbfkykkcbjhdybwf.supabase.co:6543/postgres"
+PRODUCTION_DATABASE_URL=postgres://postgres:XXXXXXXX
